Alterações finais
