# api/routes/router_tarefas.js
@@ -2,13 +2,13 @@ const express = require("express");
 
 const controllerTarefas = require("../controllers/controller_tarefas");
 
-const validarToken = require('../middlewares/auth');
+const authMiddleware = require('../middlewares/authMiddleware');
 
 const router = express.Router();
 
 router.post("/", controllerTarefas.validarDados, controllerTarefas.criar);
 
-router.get("/", validarToken, controllerTarefas.obterTodas);
+router.get("/", authMiddleware, controllerTarefas.obterTodas);
 
 router.get("/:id", controllerTarefas.buscarPeloId, controllerTarefas.obter);
 
